style.css
@import url('https://fonts.googleapis.com/css2?family=Alexandria:wght@500;700&family=Nanum+Gothic&display=swap');

* {
    scroll-behavior: smooth;
    box-sizing: border-box;
}

body {
    font-family: 'Nanum Gothic', sans-serif;
}

h1 {
    font-family: 'Alexandria';
    font-weight: 500;
    font-size: 60px;
}

h2 {
    font-family: 'Alexandria';
    font-size: 30px;
}

h3 {
    font-family: 'Alexandria';
    font-size: 60px;
}

p {
    font-size:32px;
}

/* --------------- Navigation --------------- */
nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #343A3E;
    height: 4em;
    font-size: 13px;
    color: #ffffff;
}

.nav-links {
    display: flex;
    gap: 25px;
    cursor: pointer;
}

.nav-links a {
    color: #ffffff;
    text-decoration: none;
    transition: 0.2s;
}

.nav-links a:visited {
    color: #ffffff;
}

.nav-links a:hover {
    color: #cfcfcf;
}

.darkmode img {
    width: 28px;
    cursor: pointer;
    margin-right: 20em;
}

.logo {
    width: 28px;
    margin-left: 20em;
}

/* --------------- Header --------------- */
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #ffffff;
    background-color: #14213d;
    height: 45em;
}

.header-text-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
}

.header-text-container h1 {
    margin-left: 3em;
}

.header-text-container p {
    margin-left: 3em;
}

.memoji {
    margin-right: 3em;
}

/* --------------- Projects --------------- */
#my-work {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 5em 10em;
    gap: 20px;
    background-color: #171717;
}

#my-work.light-mode {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding: 5em 10em;
    gap: 20px;
    background-color: #ffffff;
}

.light-mode .project-1, .project-2, .project-3, .project-4, .project-5, .project-6 {
    display: flex;
    cursor: pointer;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: 'Alexandria';
    font-size: 25px;
    font-weight: 500;
    margin-top: 30px;
    color: #ffffff;
    background-color: #9e9e9e1b;
    width: 500px;
    height: 400px;
    border-radius: 50px;
    gap: 10px;
}

.light-mode .project-1 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #171717;
}

.light-mode .project-2 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #0D6EFD;
}

.light-mode .project-3 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #FDC103;
}

.light-mode .project-4 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #8338ec;
}

.light-mode .project-5 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #ff006e;
}

.light-mode .project-6 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #4cc9f0;
}

.project-1, .project-2, .project-3, .project-4, .project-5, .project-6 {
    display: flex;
    cursor: pointer;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: 'Alexandria';
    font-size: 25px;
    font-weight: 500;
    margin-top: 30px;
    color: #ffffff;
    background-color: #ffffff0c;
    width: 500px;
    height: 400px;
    border-radius: 50px;
    gap: 10px;
}

.project-1 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #ffffff;
}

.project-2 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #0D6EFD;
}

.project-3 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #FDC103;
}

.project-4 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #8338ec;
}

.project-5 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #ff006e;
}

.project-6 {
    background-image: url(./images/memoji.svg);
    background-size: cover;
    background-color: #4cc9f0;
}

/* --------------- About Me --------------- */
#about-me {
    background-color: #000000;
    background-image: url(./images/Argo.jpg);
    background-size: auto;
    background-position: bottom;
    color: #ffffff;
    height: 60em;
}

.about-text-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80%;
    margin: auto;
    padding: 14em 0;
    gap: 20px;
}

/* --------------- Experience --------------- */
#experience.light-mode {
    background-color: #ffffff;
    color: #171717;
}

#experience {
    background-color: #171717;
    color: #ffffff;
}

.experience-container {
    text-align: center;
    padding: 14em 200px;
}

.experience-container ul {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    width: 100%;
    margin-top: 50px;
}

.experience-container li {
    display: flex;
    align-items: center;
    font-family: 'Alexandria';
    font-size: 32px;
    font-weight: 900;
    gap: 10px;
}

.experience-container img {
    width: 50px;
}

/* --------------- Footer --------------- */
footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #000000;
    color: #ffffff;
    padding: 30px;
  }

  footer p {
    margin-bottom: 20px;
    font-size: 14px;
  }
  
  footer .links {
    text-align: center;
  }
  
  footer a {
    color: #ffffffb1;
    font-size: 14px;
    border-radius: 10px;
    padding: 6px 10px;
    text-decoration: none;
    transition: 0.5s ease;
    margin: 3px;
  }
  
  footer a:visited {
    color: #ffffffb1;
  }
  
  footer a:hover {
    color: #ffffff5d;
  }

/* --------------- Mobile Response --------------- */
@media only screen and (max-width: 1100px) {
    html, body {
        overflow-x: hidden;
      }

    body {
        display: flex;
        flex-direction: column;
        width: 100%;
        justify-content: center;
        align-items: center;
        margin: 0;
        padding: 0;
    }

    h1 {
        font-size: 30px;
    }
    
    .logo {
        margin-left: 30px;
    }

    .darkmode {
        margin-right: 30px;
    }

    nav li {
        display: none;
    }

    nav {
        width: 100%;
    }

    nav a {
        width: 30px;
    }

    header {
        width: 100%;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .header-text-container h1 {
        margin: 0;
    }

    .header-text-container p {
        margin: 0;
    }

    .header-text-container {
        padding: 0;
        margin: 0;
    }

    .memoji {
        width: 400px;
        margin: 0;
    }

    main {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    #my-work {
        padding: 0;
        gap: 0;
    }

    #my-work.light-mode {
        padding: 0;
        gap: 0;
    }

    #my-work .project-1, .project-2, .project-3, .project-4, .project-5, .project-6 {
        border-radius: 0;
        margin-top: 0;
    }

    .about-text-container {
        flex-direction: column;
        justify-content: center;
        align-items: center;
        text-align: center;
        margin: 60px 40px;
        padding: 0;
    }

    .about-text-container p {
        font-size: 20px;
    }
    
    .experience-container {
        margin: 40px 80px;
        padding: 0;
    }

    footer {
        width: 100%;
    }
}

